--- a/app/public/project-explorer/index.html
+++ b/app/public/project-explorer/index.html
@@ -51,7 +51,7 @@
             <p>Project Explorer is a repository for final year projects across all departments at your 
                 institution. You can submit your project and search projects submitted by others to learn from.
             </p>
-            <a class="btn btn-primary" href="#" role="button">Get Started</a>
+            <a class="btn btn-primary" href="register.html" role="button">Get Started</a>
             <a class="btn btn-secondary" href="#" role="button">Login</a>
           </div>
         </div>
