--- a/app/public/project-explorer/index.html
+++ b/app/public/project-explorer/index.html
@@ -52,7 +52,7 @@
                 institution. You can submit your project and search projects submitted by others to learn from.
             </p>
             <a class="btn btn-primary" href="register.html" role="button">Get Started</a>
-            <a class="btn btn-secondary" href="#" role="button">Login</a>
+            <a class="btn btn-secondary" href="login.html" role="button">Login</a>
           </div>
         </div>
           
