--- a/app/public/project-explorer/login.html
+++ b/app/public/project-explorer/login.html
@@ -49,11 +49,11 @@
         <form>
             <div class="form-group">
               <label for="Email1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
             </div>
             <div class="form-group">
               <label for="Password">Password</label>
-              <input type="password" class="form-control" id="Password1" placeholder="Password">
+              <input type="password" name="password" class="form-control" id="Password1" placeholder="Password">
             </div>
             <button type="submit" class="btn btn-primary mb-5">Login</button>
           </form>
