5th correction week3

--- a/app/public/project-explorer/profile.html
+++ b/app/public/project-explorer/profile.html
@@ -57,22 +57,22 @@
                 <div class="form-row">
                     <div class="form-group col">
                       <label for="firstname">First Name</label>
-                      <input type="text" class="form-control" placeholder="First name">
+                      <input type="text" name="firstName" class="form-control" placeholder="First name">
                     </div>
                     <div class="col">
                       <label for="lastname">Last Name</label>
-                      <input type="text" class="form-control" placeholder="Last name">
+                      <input type="text" name="lastName" class="form-control" placeholder="Last name">
                     </div>
                   </div>
                 
                   <div class="form-row">
                     <div class="form-group col">
                       <label for="inputEmail">Email</label>
-                      <input type="email" class="form-control" id="inputEmail" placeholder="Your Email address">
+                      <input type="email" name="email" class="form-control" id="inputEmail" placeholder="Your Email address">
                     </div>
                     <div class="form-group col-md-6">
                         <label for="inputState">Program</label>
-                        <select id="inputState" class="form-control">
+                        <select id="inputState" name="program" class="form-control">
                           <option selected>Computer Science</option>
                           <option>Computer Information Systems</option>
                           <option>Computer Technology</option>
@@ -83,12 +83,12 @@
                   <div class="form-row">
                       <div class="form-group col-md">
                         <label for="matricNumber">Matriculation number</label>
-                        <input type="text" class="form-control" id="matricNumber" placeholder="eg. 16/2020">
+                        <input type="text" name="matricNumber" class="form-control" id="matricNumber" placeholder="eg. 16/2020">
                       </div>
 
                       <div class="form-group col-md">
                         <label for="inputState">Graduation year</label>
-                        <select id="inputState" class="form-control">
+                        <select id="inputState" name="graduationYear" class="form-control">
                           <option value= "2013"selected>2013</option>
                           <option value="2014">2014</option>
                           <option value="2015">2015</option>
