--- a/app/public/project-explorer/register.html
+++ b/app/public/project-explorer/register.html
@@ -72,7 +72,7 @@
                   <div class="form-row">
                       <div class="form-group col-md-6">
                         <label for="inputState">Program</label>
-                        <select id="inputState" class="form-control">
+                        <select id="inputState" name="program" class="form-control">
                           <option selected>Computer Science</option>
                           <option>Computer Information Systems</option>
                           <option>Computer Technology</option>
