--- a/app/public/project-explorer/profile.html
+++ b/app/public/project-explorer/profile.html
@@ -111,17 +111,17 @@
             <div class="form-row">
                 <div class="form-group col">
                     <label for="currentPassword">Current password</label>
-                    <input type="password" class="form-control" id="currentPassword" placeholder="Current password">
+                    <input type="password" name="password" class="form-control" id="currentPassword" placeholder="Current password">
                   </div>
 
                   <div class="form-group col">
                     <label for="newPassword">New password</label>
-                    <input type="password" class="form-control" id="newPassword" placeholder="Your new password">
+                    <input type="password" name="newPassword" class="form-control" id="newPassword" placeholder="Your new password">
                   </div>
 
                   <div class="form-group col">
                     <label for="confirmPassword">Confirm password</label>
-                    <input type="password" class="form-control" id="inputPassword" placeholder="Confirm new password">
+                    <input type="password" name="confirmPassword" class="form-control" id="inputPassword" placeholder="Confirm new password">
                   </div>
                   
               </div>
