--- a/app/public/project-explorer/profile.html
+++ b/app/public/project-explorer/profile.html
@@ -111,7 +111,7 @@
             <div class="form-row">
                 <div class="form-group col">
                     <label for="currentPassword">Current password</label>
-                    <input type="password" name="password" class="form-control" id="currentPassword" placeholder="Current password">
+                    <input type="password" name="currentPassword" class="form-control" id="currentPassword" placeholder="Current password">
                   </div>
 
                   <div class="form-group col">
