--- a/app/public/project-explorer/search.html
+++ b/app/public/project-explorer/search.html
@@ -44,7 +44,7 @@
 
         <div class="bg-light p-3 mb-3">
             <h4>Project Gallery</h4>
-            <form>
+            <form name="searchTerm">
                 <div class="form-row">
                     <div class="form-group col-lg-6">
                       <input type="text" class="form-control form-control-lg" placeholder="First name">
