--- a/app/public/project-explorer/createproject.html
+++ b/app/public/project-explorer/createproject.html
@@ -48,13 +48,13 @@
           <div class="form-row">
             <div class="form-group col">
               <label for="projectname">Project Name</label>
-              <input type="text" class="form-control" placeholder="First name">
+              <input type="text" name="projectName" class="form-control" placeholder="First name">
             </div>
           </div>
             
           <div class="form-group">
-            <label for="exampleFormControlTextarea1">Example textarea</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
+            <label for="exampleFormControlTextarea1">Project Abstarct</label>
+            <textarea name="abstract" class="form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
           </div>
 
             <div class="form-row">
