--- a/app/public/project-explorer/search.html
+++ b/app/public/project-explorer/search.html
@@ -47,12 +47,12 @@
             <form name="searchTerm">
                 <div class="form-row">
                     <div class="form-group col-lg-6">
-                      <input type="text" class="form-control form-control-lg" placeholder="First name">
+                      <input type="text" name="searchTerm" class="form-control form-control-lg" placeholder="First name">
                     </div>
 
                     <div class="form-group col-lg-4">
                         <label for="inputState" style="color:#AAAAAA;">Search by</label>
-                        <select id="inputState" class="form-control form-control-lg">
+                        <select id="inputState" name="searchTerm" class="form-control form-control-lg">
                           <option selected>Computer Science</option>
                           <option>Computer Information Systems</option>
                           <option>Computer Technology</option>
