11th correction week3

--- a/app/public/project-explorer/editproject.html
+++ b/app/public/project-explorer/editproject.html
@@ -125,7 +125,7 @@
                         <input type="text" name="tags" class="form-control" placeholder="Use # to tag project with different topics (e.g #javascript #mongodb)">
                       </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-lg btn-primary">Submit</button>
                   </div>
                 </div>
                 
