--- a/app/public/project-explorer/search.html
+++ b/app/public/project-explorer/search.html
@@ -59,7 +59,7 @@
                         </select>
                       </div>
 
-                      <div class="col-lg-2 d-flex  justify-content-end"><button type="submit" class="btn btn-primary">Submit</button></div>
+                      <div class="col-lg-2 d-flex  justify-content-end"><button type="submit" class="btn btn-lg btn-primary">Submit</button></div>
                   </div>
             </form> 
         </div>
