--- a/app/public/project-explorer/createproject.html
+++ b/app/public/project-explorer/createproject.html
@@ -48,7 +48,7 @@
           <div class="form-row">
             <div class="form-group col">
               <label for="projectname">Project Name</label>
-              <input type="text" name="projectName" class="form-control" placeholder="First name">
+              <input type="text" name="name" class="form-control" placeholder="First name">
             </div>
           </div>
             
