--- a/app/public/project-explorer/createproject.html
+++ b/app/public/project-explorer/createproject.html
@@ -59,14 +59,14 @@
 
             <div class="form-row">
               <div class="form-group col">
-                <label for="author">Author(s)</label>
+                <label for="authors">Author(s)</label>
                 <input type="text" class="form-control" placeholder="Enter author names (seperated by comma)">
               </div>
             </div>
 
             <div class="form-row">
               <div class="form-group col">
-                <label for="tag">Tag(s)</label>
+                <label for="tags">Tag(s)</label>
                 <input type="text" class="form-control" placeholder="Use # to tag project with different topics (e.g #javascript #mongodb)">
               </div>
             </div>
