--- a/app/public/project-explorer/createproject.html
+++ b/app/public/project-explorer/createproject.html
@@ -60,14 +60,14 @@
             <div class="form-row">
               <div class="form-group col">
                 <label for="authors">Author(s)</label>
-                <input type="text" class="form-control" placeholder="Enter author names (seperated by comma)">
+                <input type="text" name= "authors" class="form-control" placeholder="Enter author names (seperated by comma)">
               </div>
             </div>
 
             <div class="form-row">
               <div class="form-group col">
                 <label for="tags">Tag(s)</label>
-                <input type="text" class="form-control" placeholder="Use # to tag project with different topics (e.g #javascript #mongodb)">
+                <input type="text" name="tags" class="form-control" placeholder="Use # to tag project with different topics (e.g #javascript #mongodb)">
               </div>
             </div>
             <button type="submit" class="btn btn-primary">Continue</button>
