--- a/app/public/project-explorer/editproject.html
+++ b/app/public/project-explorer/editproject.html
@@ -109,6 +109,7 @@
             </div>
 
             <div class="row">
+              <form>
               <div class="col-6">
                 <div class="form-row">
                   <div class="form-group col">
@@ -130,6 +131,7 @@
                 </div>
                 
               </div>
+            </form>
             </div>
 
             <footer>
