--- a/app/public/project-explorer/editproject.html
+++ b/app/public/project-explorer/editproject.html
@@ -88,12 +88,14 @@
                 </div>
 
                 <div class="row">
+                  <form>
                     <div class="col">
                         <div class="form-group">
                             <label for="exampleFormControlTextarea1">Project Abstract</label>
                             <textarea name="abstract" class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Project1 is very interesting project"></textarea>
                           </div>
                     </div>
+                  </form>
 
                     <div class="col">
                         
