--- a/app/public/project-explorer/viewproject.html
+++ b/app/public/project-explorer/viewproject.html
@@ -50,7 +50,7 @@
                 <div class="col-md">Date Created<br> 2020-08-30</div>
                 <div class="col-md">Last updated<br> 2020-08-30</div>
         <!-- The button is aligned to the end of row -->
-                <div class="col-md d-flex  justify-content-end"><button type="submit" class="btn btn-primary">Edit project</button></div>
+                <div class="col-md d-flex  justify-content-end"><a class="btn btn-primary" href="editproject.html" role="button">Edit Project</a></div>
             </div>
             </div>
         
