--- a/app/public/project-explorer/editproject.html
+++ b/app/public/project-explorer/editproject.html
@@ -45,11 +45,11 @@
         <div class="container mb-3" >
             <h4>Project 1</h4>
             <div class="row bg-light">
-                <div class="col-md">Created By<br>Ade Chris</div>
-                <div class="col-md">Date Created<br> 2020-08-30</div>
-                <div class="col-md">Last updated<br> 2020-08-30</div>
+                <div class="col">Created By<br>Ade Chris</div>
+                <div class="col">Date Created<br> 2020-08-30</div>
+                <div class="col">Last updated<br> 2020-08-30</div>
         <!-- The button is aligned to the end of row -->
-                <div class="col-md d-flex  justify-content-end"><a class="btn btn-primary" href="viewproject.html" role="button">View Project</a></div>
+                <div class="col d-flex  justify-content-end"><a class="btn btn-primary" href="viewproject.html" role="button">View Project</a></div>
             </div>
             </div>
 
@@ -81,7 +81,7 @@
                             <label for="exampleFormControlTextarea1">Project Abstract</label>
                             <textarea name="abstract" class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Project1 is very interesting project"></textarea>
                           </div>
-                    </div>
+                    
 
                     <div class="col-6">
                             <div class="card">
