--- a/app/public/project-explorer/editproject.html
+++ b/app/public/project-explorer/editproject.html
@@ -85,7 +85,7 @@
                     <div class="col-6">
                             <div class="card">
                                 <div class="card-header">
-                                 Project File
+                                 project files
                                 </div>
                                 <div class="card-body">
                                   <p class="card-text">No file uploaded yet</p>
